sync1_server/k8s/redis-debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-connection-test
spec:
  containers:
  - name: test-container
    image: redis:7-alpine # Официальный образ Redis с redis-cli
    # Эта команда попытается "пингануть" Redis сервер
    command: ["/bin/sh", "-c"]
    args:
    - >
      echo "Pinging Redis server...";
      redis-cli -h $REDIS_HOST -p $REDIS_PORT -a $REDIS_PASSWORD --user $REDIS_USER ping;
      if [ $? -eq 0 ]; then
        echo "---";
        echo "SUCCESS: Received a PONG response from Redis.";
      else
        echo "---";
        echo "ERROR: Failed to connect or authenticate with Redis.";
      fi;
      echo "Pod will now sleep to allow for inspection.";
      sleep 3600;
    # Передаем переменные из тех же ConfigMap и Secret
  restartPolicy: Never
