sync1_server/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sync1-server-ingress
  annotations:
    # Эта аннотация указывает, что нужно использовать стандартный ingress-контроллер,
    # который обычно предустановлен в управляемых кластерах.
    # Возможно, в Timeweb используется своя аннотация, это стоит уточнить в их документации.
    kubernetes.io/ingress.class: "nginx" 
    # Эта аннотация может понадобиться для автоматического получения SSL-сертификатов от Let's Encrypt
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
spec:
  tls:
  - hosts:
    - api2.my-points.ru
    - web2.my-points.ru
    - insights2.my-points.ru
    secretName: serverpod-tls # Имя секрета, где будут храниться SSL-сертификаты
  rules:
  - host: "api2.my-points.ru"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sync1-server-service
            port:
              name: api
  - host: "web2.my-points.ru"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sync1-server-service
            port:
              name: web
  - host: "insights2.my-points.ru"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sync1-server-service
            port:
              name: insights
